@@ -28,6 +28,7 @@
 * Introduced the MIPMAPMEM Scene texture image maps resize policy
 * GPU out-of-core rendering now automatically disable Film GPU image pipeline to save more memory
 * Added the support for Film-only out-of-core rendering (CUDA-only) with property opencl.outofcore.film.enable
+* Added a safety check for infinite light source when HDR with invalid values (NaN, Inf, etc.) is used
 
 ### Fixed Bugs
 
